force-app/main/default/objects/Syndication_Bank__c/Syndication_Bank__c.object-meta.xml
<CustomObject>
    <label>Syndication Bank</label>
    <nameField>
        <displayFormat>SynBank-{00}</displayFormat>
        <label>Syndication Bank Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Syndication Banks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>