force-app/main/default/objects/Syndication_Bank__c/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <label>Bank</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Syndication Banks</relationshipLabel>
    <relationshipName>Syndications</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>