force-app/main/default/objects/Syndication_Bank__c/fields/Percent_of_Syndication__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Syndication__c</fullName>
    <formula>Amount__c / Syndication__r.Amount__c</formula>
    <label>Percent of Syndication</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>