force-app/main/default/objects/Syndication_Bank__c/fields/Syndication__c.field-meta.xml
<CustomField>
    <fullName>Syndication__c</fullName>
    <label>Syndication</label>
    <referenceTo>Syndication__c</referenceTo>
    <relationshipLabel>Syndication Banks</relationshipLabel>
    <relationshipName>Syndication_Banks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>